# para

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  accounting.md  build.rs  install.sh  justfile  node.md  para.toml
.forgejo/workflows/: ci.yaml  release.yaml
.github/workflows/: ci.yaml  release.yaml  static.yaml
ckpool/: .gitignore  configure.ac
ckpool/src/: Makefile.am  bitcoin.c  bitcoin.h  ckpmsg.c  ckpool.c  ckpool.h  connector.c  connector.h  generator.c  generator.h  libckpool.c  libckpool.h  notifier.c  sha2.c  sha2.h  stratifier.c  stratifier.h  uthash.h  utlist.h
ckpool/src/jansson-2.14/: jansson_private_config.h.in
ckpool/test/: generate_user.c
ckstats/: package.json
ckstats/components/: PoolStatsDisplay.tsx
copr/: bitcoin.conf  ckpool.conf  ckpool.mainnet.conf  nginx.conf
copr/mempool/: docker-compose.yml
crates/bitcoind-harness/: Cargo.toml
crates/bitcoind-harness/src/: bitcoind.rs  main.rs
crates/harness/: Cargo.toml
crates/harness/src/: bitcoind.rs  lib.rs
crates/stratum/: Cargo.toml  README.md
crates/stratum/src/: authorize.rs  client.rs  client_reconnect.rs  difficulty.rs  error.rs  event.rs  extranonce.rs  job_id.rs  lib.rs  message.rs  method.rs  nbits.rs  nonce.rs  notify.rs  ntime.rs  prevhash.rs  reconnect.rs  set_difficulty.rs  si.rs  subscribe.rs  suggest_difficulty.rs  username.rs  version.rs
crates/stratum/src/client/: actor.rs
crates/stratum/src/method/: authorize.rs  configure.rs  notify.rs  submit.rs  subscribe.rs
deploy/: bitcoin.conf  checkout  ckpool.conf  ckpool.service  deploy-bitcoind  deploy-ckpool  deploy-para  nginx.conf  para.service  setup
docs/: book.toml  index.css
docs/src/: SUMMARY.md  acknowledgments.md  contributing.md  faq.md  introduction.md  overview.md  payout.md  stack.md  thanks.md
docs/src/gettingstarted/: developer.md  miner.md
docs/theme/: highlight.css  index.hbs
docs/theme/css/: chrome.css  general.css  variables.css
examples/: openapi.rs
fuzz/: Cargo.toml  stratum.dict
fuzz/fuzz_targets/: difficulty.rs  merkle_root.rs  message.rs  method_from_parts.rs  primitives.rs
para/: Cargo.toml  README.md  justfile  rustfmt.toml
para/src/: arguments.rs  chain.rs  client.rs  database.rs  difficulty.rs  hash_rate.rs  lib.rs  options.rs  stratum.rs  subcommand.rs  templates.rs  util.rs
para/src/stratum/: nbits.rs  nonce.rs  ntime.rs  prev_hash.rs  prevhash.rs  version.rs
para/src/subcommand/: digest.rs  miner.rs  ping.rs  proxy.rs  server.rs  sync.rs  worker.rs
para/src/subcommand/miner/: client.rs  controller.rs  hasher.rs
para/src/subcommand/server/: aggregator.rs  api.rs  config.rs  error.rs
para/src/subcommand/server/aggregator/: pool.rs  user.rs
para/src/subcommand/server/api/: pool.rs  user.rs
para/src/templates/: healthcheck.rs  home.rs
para/static/: index.css
para/templates/: healthcheck.html
src/: api.rs  arguments.rs  argus.rs  block_template.rs  chain.rs  ckpool.rs  coinbase.rs  coinbase_builder.rs  connection.rs  decay.rs  difficulty.rs  difficulty_foo.rs  enonce_allocator.rs  epoch.rs  event_sink.rs  extranonces.rs  generator.rs  hash.rs  hash_rate.rs  hashdays.rs  hashprice.rs  hashrate.rs  http.rs  http_server.rs  job.rs  jobs.rs  lib.rs  log_broadcast.rs  logs.rs  logstream.rs  metatron.rs  metrics.rs  mode.rs  nexus.rs  options.rs  ph_days.rs  record_sink.rs  reject_tracker.rs  retry.rs  router.rs  (+24 more)
src/api/: pool.rs  proxy.rs  router.rs  users.rs
src/ckpool/: hash_rate.rs  user.rs
src/event_sink/: database.rs  event.rs  file.rs  multi.rs
src/hash/: days.rs  price.rs  rate.rs  value.rs  work.rs
src/http_server/: accept_json.rs  api.rs  auth.rs  error.rs  templates.rs
src/metatron/: client.rs  session.rs  stats.rs  user.rs  worker.rs
src/record_sink/: database.rs  event.rs  file.rs  multi.rs
src/router/: control.rs  error.rs  greeter.rs  intents.rs  order.rs  orders.rs  slot.rs
src/settings/: bitcoin_options.rs  common_options.rs  pool_options.rs  proxy_options.rs  router_options.rs
src/store/: entry.rs
src/stratifier/: bouncer.rs  reject_tracker.rs  session.rs  state.rs
src/stratum/: authorize.rs  client.rs  configure.rs  difficulty.rs  error.rs  event.rs  extranonce.rs  job_id.rs  merkle.rs  message.rs  nbits.rs  nonce.rs  notify.rs  ntime.rs  prevhash.rs  set_difficulty.rs  si.rs  submit.rs  subscribe.rs  suggest_difficulty.rs  username.rs  version.rs
src/stratum/client/: actor.rs  connection.rs  error.rs
src/subcommand/: gui.rs  miner.rs  ping.rs  pool.rs  proxy.rs  router.rs  server.rs  settings_cmd.rs  sync.rs  template.rs  wallet.rs
src/subcommand/miner/: controller.rs  hasher.rs  metrics.rs  version_rolling.rs
src/subcommand/pool/: config.rs  pool_config.rs
src/subcommand/proxy/: proxy_config.rs
src/subcommand/server/: accept_json.rs  account.rs  aggregator.rs  api.rs  blocks.rs  cache.rs  config.rs  database.rs  error.rs  node_status.rs  notifications.rs  payouts.rs  rounds.rs  server_config.rs  sharediff.rs  sync_routes.rs  templates.rs
src/subcommand/wallet/: balance.rs  generate.rs  receive.rs  send.rs
static/: aggregator.css  dashboard.css  dashboard.js
stats/ckstats-copy/: package.json
stats/ckstats-copy/app/: layout.tsx
templates/: dashboard.html  healthcheck.html  healthcheckagg.html  home.html  login.html  order.html  page.html  payouts.html  pool-home.html  pool.html  proxy-home.html  proxy.html  router.html  sessions.html  simulate-payouts.html  slot.html  status.html  upstream.html  user.html  users.html  workers.html
templates/aggregator/: dashboard.html
tests/: account.rs  alerts.rs  bitcoind.rs  command_builder.rs  event_sink.rs  expected.rs  generator.rs  ignored.rs  lib.rs  miner.rs  payouts.rs  ping.rs  pool.rs  pool_logging.rs  proxy.rs  router.rs  server.rs  server_with_db.rs  stratifier.rs  stratum_logic.rs  sync.rs  template.rs  test_ckpool.rs  test_pool.rs  test_proxy.rs  test_psql.rs  test_router.rs  test_server.rs  to_args.rs  wallet.rs
tmp/: accounts.sql  migration.sql  schema.sql  update_trigger  update_trigger.sql
(+11 files in other folders)
