[package]
name = "para"
description = "Parasite toolkit"
version = "0.5.3"
homepage = "https://github.com/parasitepool/para"
autotests = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[workspace]
members = [".", "crates/*"]

[workspace.package]
authors = ["The Parasite Devs"]
edition = "2024"
license = "CC0-1.0"
repository = "https://github.com/parasitepool/para"
rust-version = "1.89.0"

[workspace.dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
bitcoin = { version = "0.32.7", features = ["rand", "serde"] }
bitcoincore-rpc = "0.19.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[features]
swagger-ui = ["dep:utoipa-swagger-ui"]

[dependencies]
anyhow.workspace = true
axum = { version = "0.8.3", features = ["http2"] }
axum-server = "0.7.3"
backon = "1.6.0"
base64 = "0.22.1"
bip322 = "0.0.10"
bitcoin.workspace = true
bitcoincore-rpc.workspace = true
boilerplate = { version = "1.1.1", features = ["axum"] }
byteorder = "1.5.0"
chrono = "0.4.41"
clap = { version = "4.5.36", features = ["derive", "env"] }
dashmap = "6.1.0"
derive_more = { version = "2.0.1", features = ["display"] }
dirs = "6.0.0"
futures = "0.3.31"
hex = "0.4.3"
lru = "0.16.2"
mime_guess = "2.0.5"
parking_lot = "0.12.5"
primitive-types = "0.14.0"
rand = "0.9.1"
reqwest = { version = "0.12.22", features = ["rustls-tls", "blocking", "json"] }
rust-embed = "8.7.1"
rustls = { version = "0.23.26", features = ["ring"] }
rustls-acme = { version = "0.14.0", features = ["axum"] }
serde.workspace = true
serde_json.workspace = true
serde_with = "3.14.0"
snafu = "0.8.9"
sqlx = { version =  "0.8.5", features = ["postgres", "runtime-tokio"] }
sysinfo = "0.37.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.15"
tower-http = { version = "0.6.2", features = ["auth", "fs", "set-header"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version =  "0.3.19", features = ["env-filter", "fmt"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version =  "9.0.2", features = ["axum"], optional = true }
zeromq = "0.4.1"

[dev-dependencies]
chrono = "0.4.41"
harness = { path = "crates/harness" }
nix = "0.30.1"
ntest = "0.9.3"
once_cell = "1.21.3"
pretty_assertions = "1.4.1"
serial_test = "3.2.0"
tempfile = "3.23.0"
urlencoding = "2.1.3"

[target.'cfg(target_os = "linux")'.dev-dependencies]
pgtemp = "0.7.1"

[[bin]]
name = "para"
path = "src/bin/main.rs"

[lib]
name = "para"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/lib.rs"
