[package]
name = "para"
description = "Parasite pool server"
version = "0.0.1"
edition = "2024"
authors = ["The Parasite Devs"]
homepage = "https://parasite.xyz"
autotests = false

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
axum = { version = "0.8.3", features = ["http2"] }
axum-server = "0.7.2"
clap = { version = "4.5.36", features = ["derive", "env"] }
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "set-header"] }

[[bin]]
name = "para"
path = "src/bin/main.rs"

[lib]
name = "para"
path = "src/lib.rs"
