[package]
name = "para"
description = "Parasite pool server"
version = "0.0.1"
edition = "2024"
authors = ["The Parasite Devs"]
homepage = "https://parasite.wtf"
autotests = false

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
axum = { version = "0.8.3", features = ["http2"] }
axum-server = "0.7.2"
bitcoin = "0.32.6"
boilerplate = { version = "1.0.1", features = ["axum"] }
clap = { version = "4.5.36", features = ["derive", "env"] }
futures = "0.3.31"
html-escaper = "0.2.0"
mime_guess = "2.0.5"
rust-embed = "8.7.1"
rustls = { version = "0.23.26", features = ["ring"] }
rustls-acme = { version = "0.13.0", features = ["axum"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version =  "0.8.5", features = ["postgres", "runtime-tokio"] }
sysinfo = "0.35.1"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.2", features = ["auth", "fs", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = { version =  "0.3.19", features = ["env-filter", "fmt"] }

[[bin]]
name = "para"
path = "src/bin/main.rs"

[lib]
name = "para"
path = "src/lib.rs"
