[package]
name = "harness"
description = "Harness for interacting with bitcoind"
version = "0.0.1"

authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bitcoin.workspace = true
bitcoind-async-client.workspace = true
cargo_metadata = "0.23.0"
clap.workspace = true
ctrlc = { version = "3.5", features = ["termination"] }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile = "3.23.0"
tokio.workspace = true

[[bin]]
name = "harness"
path = "src/bin/main.rs"

[lib]
name = "harness"
path = "src/lib.rs"
