[package]
name = "stratum"
version = "0.0.5"
description = "Stratum protocol types, helpers and client"
repository = "https://github.com/parasitepool/para/tree/master/crates/stratum"
readme = "README.md"
license = "CC0-1.0"

authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
client = ["tokio", "futures", "tokio-util", "tracing"]

[dependencies]
bitcoin.workspace = true
byteorder.workspace = true
derive_more.workspace = true
futures = { workspace = true, optional = true }
hex.workspace = true
primitive-types.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
smallvec = "1.15.1"
snafu.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "time", "rt", "sync", "macros"], optional = true }
tokio-util = { workspace = true, features = ["codec"], optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
